<resources>
    <string name="app_name">Taller2</string>
    <string name="configuracion">Configuracion</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="ingresos">Ingresos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="egresos">Egresos</string>
    <string name="configuracion2">Configuracion</string>
    <string name="perfil2">Perfil</string>
    <string name="presupuesto2">Presupuesto</string>
    <string name="favoritos2">Favoritos</string>
    <string name="ingresos2">Ingresos</string>
    <string name="egresos2">Egresos</string>

</resources>
