<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.yanirayanes.taller2.MainActivity">

    <TableRow
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">
        <LinearLayout
            android:background="#04B4AE"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imgconfiguracion"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/conf"/>
            <TextView
                android:id="@+id/configuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion"
                android:gravity="center"/>
        </LinearLayout>
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="25dp"
            />
        <LinearLayout
            android:background="#01DF3A"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgperfil"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/perf"/>
            <TextView
                android:id="@+id/perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:gravity="center"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3104B4"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imgfav"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/fav" />

            <TextView
                android:id="@+id/favoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/favoritos" />
        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#A901BD"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imgingresos"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/ing" />

            <TextView
                android:id="@+id/ingresos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ingresos" />
        </LinearLayout>

    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">
        <LinearLayout
            android:background="#F5A9A9"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imgprsupuesto"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/pres"/>
            <TextView
                android:id="@+id/presupuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presupuesto"
                android:gravity="center"/>
        </LinearLayout>
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="25dp"
            />
        <LinearLayout
            android:background="#B4045F"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgegresos"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:src="@drawable/egr"/>
            <TextView
                android:id="@+id/egresos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egresos"
                android:gravity="center"/>
        </LinearLayout>

    </TableRow>



</TableLayout>
